feat: add recovery endpoint
