# auth_service/openapi.yaml
@@ -174,6 +174,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/auth/users/recover:
+        post:
+            tags:
+                - AuthService
+            operationId: AuthService_RecoverCompromisedAccount
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/RecoverCompromisedAccountRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/RecoverCompromisedAccountResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/v1/auth/users/register:
         post:
             tags:
@@ -260,6 +284,18 @@ components:
                 tokens:
                     $ref: '#/components/schemas/Tokens'
         LogOutResponse:
+            type: object
+            properties:
+                userUuid:
+                    type: string
+        RecoverCompromisedAccountRequest:
+            type: object
+            properties:
+                securityToken:
+                    type: string
+                password:
+                    type: string
+        RecoverCompromisedAccountResponse:
             type: object
             properties:
                 userUuid:
